# repro-aspect-build-nested-modules

./: MODULE.bazel  pnpm-lock.yaml
foo/: BUILD  foo.proto  package.json
subproject/: MODULE.bazel  pnpm-lock.yaml  pnpm-workspace.yaml
subproject/bar/: BUILD  bar.proto  package.json
