module(name = "foo")

bazel_dep(name = "my_subproject")
local_path_override(
    module_name = "my_subproject",
    path = "subproject",
)

bazel_dep(name = "protobuf", version = "29.1")
bazel_dep(name = "aspect_rules_js", version = "2.1.0")

bazel_dep(name = "rules_nodejs", version = "6.3.1")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain()

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True, isolate = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "@@//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

bazel_dep(name = "aspect_rules_ts", version = "3.7.0")
